[project]
name = "airflow-alerts"
version = "0.1.0"
description = ""
authors = [
    {name = "JVitoroliv3ira",email = "jvitoroliveira0711@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
]

[tool.poetry]
packages = [{include = "airflow_alerts", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
